--- a/src/style/previewField.css
+++ b/src/style/previewField.css
@@ -28,3 +28,8 @@
     border: 1px solid var(--background-border);
     outline: none;
 }
+
+.group-ui-divider {
+    margin: 10px 0;
+    border: 0.5px solid rgb(128, 128, 128, 0.2);
+}
