--- a/src/style/inputField.css
+++ b/src/style/inputField.css
@@ -1,6 +1,6 @@
 .inputField-main {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     align-items: flex-start;
     align-content: flex-start;
     flex: 1;
@@ -25,7 +25,6 @@
 .inputField-main>textarea {
     width: 100%;
     font-size: 16px;
-    padding: 10px;
     border: 1px solid black;
     border-radius: 6px;
 }
